<resources>

    <string name="app_name">ECUniversal</string>

    <!-- Error -->
    <string name="error_internet_check">Internet connection is not available. Please enable wifi or internet data.</string>

    <!-- Other -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="sing_in">SignIn</string>
    <string name="sing_up">SignUp</string>

    <!-- NavigationDrawer -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- General strings-->
    <string name="action_settings">Settings</string>
    <string name="No_network_connection">No network connection</string>
    <string name="Internal_error">Internal error, please try it later</string>
    <string name="Loading">Loading …</string>
    <string name="Retry">Retry</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Close">Close</string>
    <string name="Clear">Clear</string>
    <string name="Undo">Undo</string>
    <string name="Required_field">Required field</string>
    <string name="The_entries_must_match">The entries must match</string>
    <string name="Content_is_empty">Content is empty.</string>

    <!-- User related strings -->
    <string name="Unknown_user">Unknown user</string>
    <string name="Profile">Profile</string>
    <string name="Name_colon">Name:</string>
    <string name="Address_colon">Address:</string>
    <string name="Email_colon">Email:</string>
    <string name="Phone_colon">Phone:</string>

    <string name="Account">Account</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="Street">Street</string>
    <string name="House_code">House code</string>
    <string name="City">City</string>
    <string name="ZIP">ZIP</string>

    <string name="Changing_the_password">Changing the password</string>
    <string name="Password">Password</string>
    <string name="New_password">New password</string>
    <string name="Password_again">Password again</string>
    <string name="Change_password">Change password</string>
    <string name="Save">Save</string>

    <string name="My_orders">My orders</string>
    <string name="Branches">Branches</string>
    <string name="Settings">Settings</string>

    <!-- Login related strings-->
    <string name="Log_in">Log in</string>
    <string name="Log_out">Log out</string>
    <string name="Log_in_to_shop_via">Log in to shop via</string>
    <string name="Log_in_to_shop_via_email">Log in to shop via email</string>
    <string name="Dont_have_an_account">Don\'t have an account?</string>
    <string name="Skip">Skip</string>
    <string name="Forgot_your_password">Forget your password?</string>
    <string name="Email_for_recovery">Email for recovery</string>
    <string name="Reset">Reset</string>
    <string name="Log_me_in">Log me in</string>
    <string name="E_MAIL">E-MAIL</string>
    <string name="FACEBOOK">FACEBOOK</string>
    <string name="Register">Register</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Check_your_email_we_sent_you_an_confirmation_email">Check your email. We sent you an confirmation email about reseting password</string>
    <string name="Facebook_login_failed">Facebook login failed.</string>
    <string name="Receiving_facebook_profile_failed">Receiving facebook profile failed</string>
    <string name="Oops_login_expired">Oops login expired</string>
    <string name="Your_session_has_expired_Please_log_in_again">Your session has expired Please log in again.</string>


    <string name="under_development">Under Development</string>


</resources>
