<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:scaleType="centerCrop" />

    <!-- Login welcome form -->
    <LinearLayout
        android:id="@+id/llLoginBaseForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/black_transparent_70percent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingRight="@dimen/base_margin_horizontal"
        android:paddingTop="10dp"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/txtLoginFormText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/base_margin"
            android:text="@string/Log_in_to_shop_via"
            android:textColor="@color/textIconColorPrimary"
            android:textSize="18sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnLoginFormEmail"
            style="@style/buttonPrimaryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email"
            android:drawableStart="@drawable/email"
            android:paddingEnd="32dp"
            android:paddingLeft="@dimen/base_margin_horizontal"
            android:paddingRight="32dp"
            android:paddingStart="@dimen/base_margin_horizontal"
            android:text="@string/E_MAIL" />

        <Button
            android:id="@+id/btnLoginFormFacebook"
            style="@style/buttonPrimaryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_vertical_half"
            android:background="@drawable/button_facebook_style"
            android:drawableLeft="@drawable/facebook_icon"
            android:drawableStart="@drawable/facebook_icon"
            android:paddingEnd="32dp"
            android:paddingLeft="@dimen/base_margin_horizontal"
            android:paddingRight="32dp"
            android:paddingStart="@dimen/base_margin_horizontal"
            android:text="@string/FACEBOOK" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_vertical_half"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLoginFormRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableEnd="@drawable/arrow_right_accent"
                android:drawablePadding="4dp"
                android:drawableRight="@drawable/arrow_right_accent"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/Dont_have_an_account"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnLoginFormSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableEnd="@drawable/arrow_right_accent"
                android:drawablePadding="4dp"
                android:drawableRight="@drawable/arrow_right_accent"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/Skip"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Registration form-->
    <LinearLayout
        android:id="@+id/llLoginRegistrationForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/black_transparent_70percent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="28dp"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingRight="@dimen/base_margin_horizontal"
        android:paddingTop="10dp"
        android:visibility="gone"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLoginRegistrationText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/base_margin_vertical"
                android:paddingTop="@dimen/base_margin_vertical"
                android:text="@string/Dont_have_an_account"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="18sp"/>

            <ImageButton
                android:id="@+id/imgLoginRegistrationCloseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/Cancel"
                android:padding="5dp"
                android:src="@drawable/close"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLoginRegistrationEmailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/colorPrimaryLight">

            <AutoCompleteTextView
                android:id="@+id/atxLoginRegistrationEmailTextAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/login_registration_password"
                android:nextFocusForward="@+id/login_registration_password"
                android:nextFocusRight="@+id/login_registration_password"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/atxLoginRegistrationPasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:textColorHint="@color/colorPrimaryLight">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/ic_menu_view"
                android:drawableRight="@android:drawable/ic_menu_view"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <!--android:imeActionId="123"-->
        <!--android:imeActionLabel="@string/action_sign_up"-->
        <!--android:imeOptions="actionSend"-->

        <RadioGroup
            android:id="@+id/rgLoginRegistrationSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdLoginRegistrationSexMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/Male"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/rdLoginRegistrationSexWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/Female"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnLoginRegistrationConfirm"
            style="@style/buttonPrimaryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Register"/>
    </LinearLayout>

    <!-- Login with email form-->
    <LinearLayout
        android:id="@+id/llLoginEmailForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/black_transparent_70percent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="28dp"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingRight="@dimen/base_margin_horizontal"
        android:paddingTop="10dp"
        android:visibility="gone"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLoginEmailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/base_margin_vertical"
                android:paddingTop="@dimen/base_margin_vertical"
                android:text="@string/Log_in_to_shop_via_email"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="18sp"/>

            <ImageButton
                android:id="@+id/imgLoginEmailClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/Cancel"
                android:padding="5dp"
                android:src="@drawable/close"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLoginEmailEmailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/colorPrimaryLight">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/login_registration_password"
                android:nextFocusForward="@+id/login_registration_password"
                android:nextFocusRight="@+id/login_registration_password"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLoginEmailPasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:textColorHint="@color/colorPrimaryLight">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/ic_menu_view"
                android:drawableRight="@android:drawable/ic_menu_view"
                android:hint="@string/Password"
                android:imeActionId="124"
                android:imeActionLabel="@string/Log_in"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txtLoginEmailForgottenPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:padding="16dp"
            android:text="@string/Forgot_your_password"
            android:textColor="@color/textIconColorPrimary"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnLoginEmailConfirm"
            style="@style/buttonPrimaryStyle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:text="@string/Log_me_in"/>
    </LinearLayout>

    <!-- Forgotten password form -->
    <LinearLayout
        android:id="@+id/llLoginEmailForgottenForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/black_transparent_70percent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="28dp"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingRight="@dimen/base_margin_horizontal"
        android:paddingTop="10dp"
        android:visibility="gone"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLoginEmailForgottenText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/base_margin_vertical"
                android:paddingTop="@dimen/base_margin_vertical"
                android:text="@string/Forgot_your_password"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="18sp"/>

            <ImageButton
                android:id="@+id/imgLoginEmailForgottenBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/Cancel"
                android:padding="5dp"
                android:src="@drawable/close"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLoginEmailForgottenEmailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/colorPrimaryLight">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email_for_recovery"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/login_registration_password"
                android:nextFocusForward="@+id/login_registration_password"
                android:nextFocusRight="@+id/login_registration_password"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLoginEmailForgottenConfirm"
            style="@style/buttonPrimaryStyle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/Reset"/>
    </LinearLayout>

</RelativeLayout>
